<resources>
    <string name="app_name">Evroom</string>
    <string name="action_settings">Settings</string>

    //screen hello
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    //screen creat
    <string name="welcome">Welcome to join Evroom</string>
    <string name="title_name">Evroom</string>
    <string name="message_name">success!</string>
    <string name="btn1_name">OK</string>

    //screen event_list
    <string name="title_name1">Eventlist</string>
    <string name="contenu_event1">Gala UTT 2015 \n Monday 20h \n UTT, Troyes \n  200 participants</string>
    <string name="contenu_event2">English Night \n Monday 23 à 19h \n UTT,, 8 rue Champ... \n  13 participants</string>

    //screen content_event
    <string name="title_name2">Gala UTT</string>
    <string name="menu">List de participant &#160;&#160;&#160;-&#062;</string>
    <string name="button">Rejoindre</string>

    //screen friends
    <string name="title_name3">Friends</string>

    //screen map
    <string name="title_name4">Map</string>

    //screen car
    <string name="title_name5">Transport</string>

    //screen listpar
    <string name="title_name6">Liste de participants</string>

    //screen content_car
    <string name="time">Today-17:00</string>
    <string name="content">je propose 3 positions \n</string>

    <string name="message_name1">success.</string>

    <string name="label_main_menu1">Event</string>
    <string name="label_main_menu2">Map</string>
    <string name="label_main_menu3">Message</string>
    <string name="label_main_menu4">Car</string>

    <string name="label_quit">press back one more time to quit</string>
    <string name="title_activity_maps">Map</string>
    <string name="Bonjour">Bonjour!</string>
    <string name="parole">Je voudrais demander  une covoiturage pour  aller a gala!</string>
    <string name="title_chat">put in your msg....</string>
    <string name="hint_account">Email</string>
    <string name="hint_password">Password</string>



</resources>
