<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_green1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_marginTop="119dp"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/color_white"
        android:hint="@string/hint_account"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_black1"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/logo" />



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/color_white"
        android:hint="@string/hint_password"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_black1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/username" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ffff9845" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ffff9845"
       />
</RelativeLayout>