<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/action_layout">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#2BC4AF"
            android:weightSum="1"
            android:id="@+id/whole">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event1"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang1"
                    android:src="@mipmap/julien" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text1"
                    android:background="#ffffff"
                    android:text="@string/contenu_event1"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event1"
                android:layout_marginTop="20dp"
                android:id="@+id/event2">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang2"
                    android:src="@mipmap/laia" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text2"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event2"
                android:layout_marginTop="20dp"
                android:id="@+id/event3">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang3"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text3"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event3"
                android:layout_marginTop="20dp"
                android:id="@+id/event4">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang4"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text4"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event4"
                android:layout_marginTop="20dp"
                android:id="@+id/event5">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang5"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text5"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event5"
                android:layout_marginTop="20dp"
                android:id="@+id/event6">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang6"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text6"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event6"
                android:layout_marginTop="20dp"
                android:id="@+id/event7">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang7"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text7"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event7"
                android:layout_marginTop="20dp"
                android:id="@+id/event8">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/touxiang8"
                    android:src="@mipmap/touxiang" />

                <Button style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Text8"
                    android:background="#ffffff"
                    android:text="@string/contenu_event2"
                    android:textStyle="italic"
                    android:clickable="true" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>








    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:background="@color/color_white"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_red"
            android:text="@string/label_main_menu4"
            android:textSize="@dimen/large_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_line" />
    </RelativeLayout>



</RelativeLayout>